# graphpancake

./: .gitattributes  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  config_template.yaml  environment.yml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
docs/_static/: custom.css
graphpancake/: __init__.py
graphpancake/tests/: test_graphpancake.py
src/graphpancake/: __init__.py  _version.py  batch_processing.py  classes.py  cli.py  functions.py  graph.py
tests/: batch_query_tests.py  cli_tests.py
