# Helper file to handle all configs

[metadata]
name = graphpancake
version = 0.1.0
description = A Python library for generating molecular graphs of small organic molecules from DFT and WFT calculations.
author = Sneha Sil
author_email = snehasil2029@u.northwestern.edu
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sneha-sil/graphpancake

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pandas
    numpy
    torch
    torch-geometric
    networkx
    plotly
    matplotlib
    importlib-resources; python_version<'3.10'

# SS: edit when data files are added
# SS: edit recursive-include src/graphpancake/data *.dat for MANIFEST.in when data is added
[options.package_data]
graphpancake = data/*.dat

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    src/graphpancake/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest

